# ocaml-from-the-very-beginning

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  code-server.sh  docker-compose.yml  ocaml-from-the-very-beginning.opam
.circleci/: config.yml
.devcontainer/: devcontainer.json  docker-compose.yml
chapter_3/: solutions.ml  test.ml
chapter_4/: solutions.ml
chapter_5/: solutions.ml  test.ml
chapter_6/: dune  solutions.ml  test.ml
chapter_7/: test.ml
chapters/chapter_10/: dune  solutions.ml  test.ml
chapters/chapter_11/: solutions.ml  test.ml
chapters/chapter_6/: test.ml
chapters/chapter_7/: solutions.ml  test.ml
chapters/chapter_8/: solutions.ml  solutions_.ml  test.ml
chapters/chapter_9/: solutions.ml  test.ml
src/: 3.case_by_case.1.ml  3.case_by_case.2.ml  3.case_by_case.3.ml  3.case_by_case.4.ml  3.case_by_case.5.ml  3.case_by_case.6.ml  4.making_lists.1.ml  4.making_lists.2.ml  4.making_lists.3.ml  4.making_lists.4.ml  4.making_lists.5.ml  4.making_lists.6.ml  4.making_lists.7.ml  5.sorting_things.0.ml  5.sorting_things.1.ml  5.sorting_things.2.ml  5.sorting_things.3.ml  5.sorting_things.4.ml  5.sorting_things.5.ml  5.sorting_things.6.ml  5.sorting_things.ml  6.fns-fns-fns.0.ml  6.fns-fns-fns.1.ml  format.ml  sort.ml
