opam-version: "2.0"
name: "ocaml-from-the-very-beginning"
maintainer: "Mario Nebl <hello@mario-nebl.de>"
authors: "Mario Nebl <hello@mario-nebl.de>"
homepage: "https://github.com/brainpower-org/ocaml-from-the-very-beginning"
bug-reports: "https://github.com/brainpower-org/ocaml-from-the-very-beginning/issues"
version: "0.1"
synopsis: "Work on OCaml from the very Beginning exercises in a turn-key environment"
depends: [ "ocaml" "ocamlfind" "dune" "ounit" "core" "merlin" "ocp-indent" "utop" ]
